# questions

./: .gitignore  Dockerfile  README.md  docker-compose.yml  openapi-schema.yml  pyproject.toml
api/: serializers.py  urls.py  views.py
config/: .env  settings.py  urls.py
jservice/: apps.py  models.py  tasks.py
jservice/logic/: api.py  model.py  services.py
jservice/migrations/: 0001_initial.py
